--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/normalize.css">
-  <title>Frontend Mentor | cls</title>
+  <title>Frontend Mentor | 3columns-card-component</title>
 </head>
 
 <body>
